# vulkan-engine

./: .gitignore  Cargo.toml  imgui.ini
src/: main.rs
src/input/: Cargo.toml
src/input/src/: lib.rs
src/renderer/: Cargo.toml  build.rs
src/renderer/src/: egui_init.rs  lib.rs  shader.wgsl  texture.rs  vk_descriptor.rs  vk_init.rs  vk_pipeline.rs  vk_render.rs  vk_types.rs  vk_util.rs  vulkan_init.rs
src/renderer/src/data/: assimp_util.rs  camera.rs  data_cache.rs  data_util.rs  gltf_util.rs  gpu_data.rs  mod.rs  primitives.rs
src/renderer/src/shaders/: colored_triangle.vert  env_irradiance_cube.frag  env_irradiance_cube.frag.spv  env_prefilter_cube.frag  env_prefilter_cube.frag.spv  filtered_cube.vert  filtered_cube.vert.spv  input_structures.glsl  input_structures_ext.glsl  material_unlit.frag.spv  mesh.frag.spv  mesh.vert  mesh.vert.spv  mesh_ext.frag  mesh_ext.frag.spv  mesh_ext.vert  mesh_ext.vert.spv  pbr_base.vert.spv  shader_material.glsl  sky.comp  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  tex_image.frag  tonemapping.glsl  vertex_struct.glsl
src/renderer/src/shaders/hide/: material_pbr.frag  material_unlit.frag
src/renderer/src/vulkan/: mod.rs  vk_descriptor.rs  vk_init.rs  vk_pipeline.rs  vk_render.rs  vk_types.rs  vk_util.rs
