workspace = { members = ["src/input"] }

[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer = { path = "src/renderer" }
glam = "=0.8.5"
enum-map = "2.7.3"
pollster = "0.3"
#ash = "0.38.0"
vk-mem = "0.4.0"

[patch.crates-io]
#raw-window-handle = "0.6.2"
#ash = "0.38.0"

imgui-rs-vulkan-renderer = { git = "https://github.com/dhickel/imgui-rs-vulkan-renderer", branch = "dev" }
