[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
ash = { version = "0.38.0", features = ["linked"] }
ash-window = { version = "0.13.0" }
vk-mem = "0.4.0"

winit = { version = "0.30", features = ["rwh_06"] }
glfw = { version = "0.56.0", default-features = false, features = ["vulkan", "ash", "raw-window-handle-v0-6"] }
raw-window-handle = { version = "0.6.2", features = ["std"] }

env_logger = "0.10"
log = "0.4"
input = { path = "../input" }
glam = "=0.8.5"
bytemuck = { version = "1.16.0", features = ["derive"] }


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]


[patch.crates-io.ash-window]
raw-window-handle = "0.6.2"
ash = "0.38.0"

[patch.crates-io.glfw]
ash = "0.38.0"
raw-window-handle = "0.6.2"

[patch.crates-io]
raw-window-handle = "0.6.2"
ash = "0.38.0"




#game-loop = { version = "*", features = ["winit"] }
# Web



