[package]
name = "renderer"
version = "0.1.0"
edition = "2021"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
shaderc = "0.8.3"


[dependencies]
cfg-if = "1"


ash = { version = "0.38.0", features = ["linked"] }
ash-window = { version = "0.13.0" }
vk-mem = "0.4.0"
raw-window-handle = { version = "0.6.2", features = ["std"] }
shaderc = "0.8.3"

gltf = { version = "1.4.1" }
mikktspace = { version = "0.3.0", default-features = false, features = ["glam"] }
russimp-sys = { version = "2.0.2"}


image = "0.25.1"
half = "2.4.1"
backtrace = "0.3"

winit = { version = "0.29.15", features = ["rwh_06"] }
#glfw = { version = "0.56.0", default-features = false, features = ["vulkan", "ash", "raw-window-handle-v0-6"] }

imgui-rs-vulkan-renderer = { version = "1.12.0", features = ["vk-mem", "dynamic-rendering"] }
imgui = "0.12.0"
imgui-winit-support = "0.12.0"



env_logger = "0.10"
log = "0.4"
input = { path = "../input" }
glam = { version = "0.28.0", features = ["bytemuck"] }
bytemuck = { version = "1.16.0", features = ["derive"] }
percent-encoding = "2.3.1"
once_cell = "1.19.0"





#[patch.crates-io.ash-window]
#raw-window-handle = "0.6.2"
#ash = "0.38.0"
#
#[patch.crates-io.egui_ash_renderer]
#ash = "0.38.0"
#vk-mem = "0.4.0"
#
#
#[patch.crates-io.glfw]
#ash = "0.38.0"
#raw-window-handle = "0.6.2"


#[patch.crates-io.imgui-rs-vulkan-render]
#vk-mem = "0.4.0"


#[patch.crates-io]
#raw-window-handle = "0.6.2"
#ash = "0.38.0"
#vk-mem = "0.4.0"




#game-loop = { version = "*", features = ["winit"] }
# Web



